--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alzera/react-qr-scanner",
+  "name": "@alzera/qr-scanner",
   "version": "1.0.4",
   "description": "QR code scanner component for React apps",
   "license": "MIT",
@@ -22,6 +22,13 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    "./react": {
+      "import": "./dist/react/index.js",
+      "require": "./dist/react/index.cjs.js",
+      "default": "./dist/react/index.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
