--- a/playground/nuxt/package.json
+++ b/playground/nuxt/package.json
@@ -13,5 +13,8 @@
     "nuxt": "^3.11.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "rollup-plugin-visualizer": "^5.12.0"
   }
 }
